--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,13 @@ m4/lt~obsolete.m4
 # can automatically generate from config.status script
 # (which is called by configure script))
 Makefile
+
+
+*.csproj
+*.nuget
+*.json
+*.cache
+*.props
+*.targets
+
+bin/
